Sync branches.